--- a/nft/index.html
+++ b/nft/index.html
@@ -22,8 +22,8 @@
 </style>
 
 <!-- rawgithack development URL -->
-<!--<script src='https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js'></script>-->
-<script src='../../../../aframe/build/aframe-ar-nft.js'></script>
+<script src='https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js'></script>
+<!--<script src='../../../../aframe/build/aframe-ar-nft.js'></script>-->
 
 
 <body style='margin : 0px; overflow: hidden;'>
@@ -38,7 +38,7 @@
 
         <!-- use rawgithack to retrieve the correct url for nft marker (see 'pinball' below) -->
         <a-nft
-            type='nft' url='./aframe/examples/image-tracking/nft/trex/trex-image/trex'
+            type='nft' url='./trex/trex-image/trex'
             smooth='true' smoothCount='10' smoothTolerance='0.01' smoothThreshold='5'>
             <a-entity
                 gltf-model='./trex/scene.gltf'
