--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 <body>
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
-<a href="./index.html">nft</a>
+<a href="./nft/index.html">nft</a>
 </body>
 </html>
