--- a/nft/index.html
+++ b/nft/index.html
@@ -38,7 +38,7 @@
 
         <!-- use rawgithack to retrieve the correct url for nft marker (see 'pinball' below) -->
         <a-nft
-            type='nft' url='./trex/trex-image/trex'
+            type='nft' url='https://yyyg-2019.github.io/nft/trex/trex-image/trex'
             smooth='true' smoothCount='10' smoothTolerance='0.01' smoothThreshold='5'>
             <a-entity
                 gltf-model='./trex/scene.gltf'
