--- a/nft/index.html
+++ b/nft/index.html
@@ -41,7 +41,7 @@
             type='nft' url='https://yyyg-2019.github.io/nft/trex/trex-image/trex'
             smooth='true' smoothCount='10' smoothTolerance='0.01' smoothThreshold='5'>
             <a-entity
-                gltf-model='./trex/scene.gltf'
+                gltf-model='https://yyyg-2019.github.io/nft/trex/scene.gltf'
                 scale="5 5 5"
                 position="150 300 -100"
                 >
