--- a/nft/index.html
+++ b/nft/index.html
@@ -1,5 +1,5 @@
-<script src='https://cdn.jsdelivr.net/gh/aframevr/aframe@1c2407b26c61958baa93967b5412487cd94b290b/dist/aframe-master.min.js'></script>
-
+<!--<script src='https://cdn.jsdelivr.net/gh/aframevr/aframe@1c2407b26c61958baa93967b5412487cd94b290b/dist/aframe-master.min.js'></script>-->
+<script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
 <style>
   .arjs-loader {
     height: 100%;
